# songs-to-youtube

./: .gitignore  README.md  const.py  file_utils.py  log.py  log_widget.py  main.py  main.pyproject  mainwindow.ui  metadata.py  metadata_table_widget.py  progress_window.py  pyproject.toml  render.py  requirements.txt  resource.py  resource.qrc  settings.py  settings_window.py  song_settings_widget.py  song_tree_widget.py  song_tree_widget_item.py  songs-to-youtube.spec  upload.py  utils.py
.github/workflows/: build.yml  publish.yml
commands/render/: blurred background.command  no background.command  solid color background.command  vertical blurred background.command
config/: default.ini
presets/: blurred-sides.ini  default.ini
pyinstaller_hooks/: hook-seleniumwire.py
songs_to_youtube/: const.py  field.py  log.py  main.py  metadata.py  metadata_table_widget.py  progress_window.py  render.py  settings.py  song_settings_widget.py  song_tree_widget.py  song_tree_widget_item.py  template.py  upload.py  utils.py
songs_to_youtube/config/: default.ini
songs_to_youtube/ui/: adduser.ui  adduser_ui.py  settingswindow.ui  songsettingswindow.ui
src/: const.py  field.py  log.py  main.py  metadata.py  metadata_table_widget.py  progress_window.py  render.py  resource.py  settings.py  song_settings_widget.py  song_tree_widget.py  song_tree_widget_item.py  template.py  upload.py  utils.py
src/config/: default.ini
src/ui/: adduser.ui  (+3 more)
ui/: mainwindow.ui  metadata.ui  settingswindow.ui  songsettingswindow.ui
youtube_uploader_selenium/: Constant.py  __init__.py
(+11 files in other folders)
